--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
         <div class="button page-link fill-button" destination="home">
           WELCOME TO MY WEBSITE
         </div>
+
+        <nav class="flex">
+          <div class="link-wrap">
+            <div class="active page-link" destination="home">home</div>
+            <div class="page-link" destination="about">about</div>
+            <div class="page-link" destination="portfolio">portfolio</div>
+            <div class="page-link" destination="contact">contact</div>
+          </div>
+        </nav>
       </div>
     </section>
 
@@ -62,46 +71,6 @@
     </div>
 
     <section id="home" name="home">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <button
-          id="navbar-toggler"
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <div class="page-link nav-link" destination="shooting-star">
-                Home<span class="sr-only">(current)</span>
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="page-link nav-link" destination="about">
-                About
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="page-link nav-link" destination="portfolio">
-                Portfolio
-              </div>
-            </li>
-            <li class="nav-item">
-              <div class="page-link nav-link" destination="contact">
-                Contact
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
       <div class="jumbotron jumbotron-fluid"></div>
       <div id="home-divide" class="white-divide"></div>
     </section>
