--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="page-link" destination="portfolio">portfolio</div>
             <div class="page-link" destination="contact">contact</div>
           </div>
+          <i class="mdi mdi-menu"></i>
         </nav>
       </div>
     </section>
