--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <nav class="flex">
           <div class="link-wrap">
-            <div class="active page-link" destination="home">home</div>
+            <div class="active page-link" destination="shooting-star">home</div>
             <div class="page-link" destination="about">about</div>
             <div class="page-link" destination="portfolio">portfolio</div>
             <div class="page-link" destination="contact">contact</div>
