--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
       <div id="pt" class="canvas"></div>
 
       <div cass="flex height-fix">
-        <div class="button page-link fill-button" destination="home">
+        <div
+          id="welcome"
+          class="button page-link fill-button"
+          destination="about"
+        >
           WELCOME TO MY WEBSITE
         </div>
 
