--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
       <div id="pt" class="canvas"></div>
 
       <div cass="flex height-fix">
-        <div
-          id="welcome"
-          class="button page-link fill-button"
-          destination="about"
-        >
+        <div class="button page-link fill-button" destination="about">
           WELCOME TO MY WEBSITE
         </div>
 
