--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               </div>
             </div>
           </div>
-          <div id="mind-list" class="col-md-12 mt-5 mb-5">
+          <div id="mind-list" class="col-md-12 mt-5">
             <div class="row">
               <div class="col-md-4 col-xs-6 mind">
                 <div class="fas fa-file-code"></div>
