--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </div>
           <div id="mind-list" class="col-md-12 mt-5">
             <div class="row">
-              <div class="col-md-4 col-xs-6 mind">
+              <div class="col-md-4 col-sm-6 mind">
                 <div class="fas fa-file-code"></div>
                 <h3 class="mind-title">Clean</h3>
                 <p class="mind-description">
@@ -166,7 +166,7 @@
                   elements of developing better software.
                 </p>
               </div>
-              <div class="col-md-4 col-xs-6 mind">
+              <div class="col-md-4 col-sm-6 mind">
                 <div class="far fa-gem"></div>
                 <h3 class="mind-title">Optimization</h3>
                 <p class="mind-description">
@@ -176,7 +176,7 @@
                   multiple angles.
                 </p>
               </div>
-              <div class="col-md-4 col-xs-6 mind">
+              <div class="col-md-4 col-sm-6 mind">
                 <div class="fas fa-fingerprint"></div>
                 <h3 class="mind-title">Secure</h3>
                 <p class="mind-description">
@@ -186,7 +186,7 @@
                   and bugs as soon as possible.
                 </p>
               </div>
-              <div class="col-md-4 col-xs-6 mind">
+              <div class="col-md-4 col-sm-6 mind">
                 <div class="far fa-lightbulb"></div>
                 <h3 class="mind-title">Intuitive</h3>
                 <p class="mind-description">
@@ -197,7 +197,7 @@
                   even for first-time users.
                 </p>
               </div>
-              <div class="col-md-4 col-xs-6 mind">
+              <div class="col-md-4 col-sm-6 mind">
                 <div class="fas fa-rocket"></div>
                 <h3 class="mind-title">Productive</h3>
                 <p class="mind-description">
@@ -208,7 +208,7 @@
                   work.
                 </p>
               </div>
-              <div class="col-md-4 col-xs-6 mind">
+              <div class="col-md-4 col-sm-6 mind">
                 <div class="fas fa-book-reader"></div>
                 <h3 class="mind-title">Documentation</h3>
                 <p class="mind-description">
