--- a/index.html
+++ b/index.html
@@ -17,33 +17,15 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link
-      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-      rel="stylesheet"
-    />
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
-    <link
-      rel="stylesheet"
-      href="./src/org/thinkit/githubpages/css/preloader.css"
-    />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/preloader.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
-    <link
-      rel="stylesheet"
-      href="./src/org/thinkit/githubpages/css/navigation.css"
-    />
-    <link
-      rel="stylesheet"
-      href="./src/org/thinkit/githubpages/css/profile-card.css"
-    />
-    <link
-      rel="stylesheet"
-      href="./src/org/thinkit/githubpages/css/sns-logo-color.css"
-    />
-    <link
-      rel="stylesheet"
-      href="./src/org/thinkit/githubpages/css/barfiller.css"
-    />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/navigation.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/profile-card.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/sns-logo-color.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/barfiller.css" />
   </head>
 
   <body>
@@ -51,9 +33,7 @@
       <div id="pt" class="canvas"></div>
 
       <div cass="flex height-fix">
-        <div class="button page-link fill-button" destination="about">
-          WELCOME TO MY WEBSITE
-        </div>
+        <div class="button page-link fill-button" destination="about">WELCOME TO MY WEBSITE</div>
 
         <nav class="flex">
           <div class="link-wrap">
@@ -90,9 +70,8 @@
           <div class="profile-bio">
             <p>Hello there!</p>
             <p class="text-center">
-              I'm a full-stack Web Developer who is specialized in designing and
-              creating Java-based web applications and business improvement
-              tools.
+              I'm a full-stack Web Developer who is specialized in designing and creating Java-based
+              web applications and business improvement tools.
             </p>
           </div>
 
@@ -123,14 +102,12 @@
                 <h1>Experience</h1>
               </div>
               <p>
-                I have been involved in the design and development of various
-                web applications and business improvement tools, mainly in Java.
-                The skill graph is not the whole story of my development, but
-                these are main skills I have.<br /><br />
-                I have built a desktop app that uses Python for crawling and
-                scraping. I also have experience developing and releasing
-                Android apps to the Play Store. Basically I design and create
-                Java-based web applications, but I am also interested in the
+                I have been involved in the design and development of various web applications and
+                business improvement tools, mainly in Java. The skill graph is not the whole story
+                of my development, but these are main skills I have.<br /><br />
+                I have built a desktop app that uses Python for crawling and scraping. I also have
+                experience developing and releasing Android apps to the Play Store. Basically I
+                design and create Java-based web applications, but I am also interested in the
                 Python, Android fields and UI design.<br /><br />
                 <strong
                   ><a
@@ -167,7 +144,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem">
               <img
                 class="card-img-top"
                 src="./src/org/thinkit/githubpages/img/json-formatter-logo.png"
@@ -176,15 +153,15 @@
               <div class="card-body">
                 <h5 class="card-title">JSON Formatter</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Some quick example text to build on the card title and make up the bulk of the
+                  card's content.
                 </p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem">
               <img
                 class="card-img-top"
                 src="./src/org/thinkit/githubpages/img/json-formatter-logo.png"
@@ -193,15 +170,15 @@
               <div class="card-body">
                 <h5 class="card-title">JSON Formatter</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Some quick example text to build on the card title and make up the bulk of the
+                  card's content.
                 </p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem">
               <img
                 class="card-img-top"
                 src="./src/org/thinkit/githubpages/img/json-formatter-logo.png"
@@ -210,8 +187,8 @@
               <div class="card-body">
                 <h5 class="card-title">JSON Formatter</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Some quick example text to build on the card title and make up the bulk of the
+                  card's content.
                 </p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
@@ -234,10 +211,7 @@
                     <h6>My Repository</h6>
                     <div class="header-divide-white"></div>
 
-                    <a
-                      href="https://github.com/myConsciousness"
-                      target="_blank"
-                    >
+                    <a href="https://github.com/myConsciousness" target="_blank">
                       <div class="fab fa-github"></div>
                     </a>
                   </div>
@@ -247,16 +221,10 @@
                     <h6>Connect With Me</h6>
                     <div class="header-divide-white"></div>
 
-                    <a
-                      href="https://instagram.com/thinkit_shinya"
-                      target="_blank"
-                    >
+                    <a href="https://instagram.com/thinkit_shinya" target="_blank">
                       <div class="fab fa-instagram"></div>
                     </a>
-                    <a
-                      href="https://twitter.com/thinkit_shinya"
-                      target="_blank"
-                    >
+                    <a href="https://twitter.com/thinkit_shinya" target="_blank">
                       <div class="fab fa-twitter"></div>
                     </a>
                   </div>
@@ -321,11 +289,7 @@
                     rows="12"
                   ></textarea>
                 </div>
-                <input
-                  type="submit"
-                  class="button-color-white float-right"
-                  value="SEND"
-                />
+                <input type="submit" class="button-color-white float-right" value="SEND" />
               </form>
             </div>
           </div>
@@ -336,9 +300,7 @@
     <section id="footer">
       <div id="copyright">
         <p>
-          <span class="highlight-turquoise"
-            >Copyright © 2020 Kato Shinya All Rights Reserved.</span
-          >
+          <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
         </p>
       </div>
     </section>
