--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/preloader.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/portfolio.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/navigation.css" />
@@ -63,7 +64,6 @@
             </a>
 
             <h1>Kato Shinya</h1>
-
             <h2>- Full Stack Web Developer -</h2>
           </header>
 
@@ -141,60 +141,29 @@
       <h1>PORTFOLIO</h1>
       <div class="header-divide-black-center"></div>
 
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img
-                class="card-img-top"
-                src="./src/org/thinkit/githubpages/img/json-formatter-logo.png"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">JSON Formatter</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the
-                  card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img
-                class="card-img-top"
-                src="./src/org/thinkit/githubpages/img/json-formatter-logo.png"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">JSON Formatter</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the
-                  card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img
-                class="card-img-top"
-                src="./src/org/thinkit/githubpages/img/json-formatter-logo.png"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title">JSON Formatter</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the
-                  card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="controls">
+        <label>Filter:</label>
+        <button class="filter" data-filter="all">All</button>
+        <button class="filter" data-filter=".category-1">Category 1</button>
+        <button class="filter active" data-filter=".category-2">Category 2</button>
+
+        <label>Sort:</label>
+        <button class="sort" data-sort="myorder:asc">Asc</button>
+        <button class="sort" data-sort="myorder:desc">Desc</button>
+      </div>
+
+      <div id="mix-container" class="mix-container">
+        <div class="mix category-1" data-myorder="1"></div>
+        <div class="mix category-1" data-myorder="2"></div>
+        <div class="mix category-1" data-myorder="3"></div>
+        <div class="mix category-2" data-myorder="4"></div>
+        <div class="mix category-1" data-myorder="5"></div>
+        <div class="mix category-1" data-myorder="6"></div>
+        <div class="mix category-2" data-myorder="7"></div>
+        <div class="mix category-2" data-myorder="8"></div>
+
+        <div class="gap"></div>
+        <div class="gap"></div>
       </div>
     </section>
 
@@ -307,10 +276,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
     <script src="./src/org/thinkit/githubpages/js/jquery.barfiller.js"></script>
+    <script src="./src/org/thinkit/githubpages/js/mixitup.js"></script>
     <script src="./src/org/thinkit/githubpages/js/barfiller.js"></script>
     <script src="./src/org/thinkit/githubpages/js/mindfiller.js"></script>
     <script src="./src/org/thinkit/githubpages/js/pt.min.js"></script>
