--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="header-divide-black-center"></div>
 
       <div class="filter-wrap waypoint" data-animation="fade-in">
-        <div class="flex row">
+        <div class="flex flex-row">
           <div class="filter" data-filter="all">ALL</div>
           <div class="filter" data-filter=".java">Java</div>
           <div class="filter" data-filter=".js">JavaScript</div>
@@ -150,7 +150,7 @@
           <div class="filter" data-filter=".html">HTML</div>
         </div>
         <div class="float-bar">
-          <div class="flex row">
+          <div class="flex flex-row">
             <div class="filter" data-filter="all">ALL</div>
             <div class="filter" data-filter=".java">Java</div>
             <div class="filter" data-filter=".js">JavaScript</div>
@@ -161,7 +161,7 @@
       </div>
 
       <div class="flex">
-        <div id="gallery" class="container flex row wrap waypoint">
+        <div id="gallery" class="container flex flex-row flex-wrap waypoint">
           <div class="mix java" data-my-order="1">
             <div>
               <div class="card"></div>
