--- a/index.html
+++ b/index.html
@@ -144,25 +144,23 @@
       <div class="filter-wrap waypoint" data-animation="fade-in">
         <div class="flex flex-row">
           <div class="filter" data-filter="all">ALL</div>
-          <div class="filter" data-filter=".java">Java</div>
-          <div class="filter" data-filter=".js">JavaScript</div>
-          <div class="filter" data-filter=".py">Python</div>
-          <div class="filter" data-filter=".html">HTML</div>
+          <div class="filter" data-filter=".package">Package</div>
+          <div class="filter" data-filter=".web">Web</div>
+          <div class="filter" data-filter=".android">Android</div>
         </div>
         <div class="float-bar">
           <div class="flex flex-row">
             <div class="filter" data-filter="all">ALL</div>
-            <div class="filter" data-filter=".java">Java</div>
-            <div class="filter" data-filter=".js">JavaScript</div>
-            <div class="filter" data-filter=".py">Python</div>
-            <div class="filter" data-filter=".html">HTML</div>
+            <div class="filter" data-filter=".package">Package</div>
+            <div class="filter" data-filter=".web">Web</div>
+            <div class="filter" data-filter=".android">Android</div>
           </div>
         </div>
       </div>
 
       <div class="flex">
         <div id="gallery" class="container flex flex-row flex-wrap waypoint">
-          <div class="mix java" data-my-order="1">
+          <div class="mix package" data-my-order="1">
             <div>
               <div class="card"></div>
               <div class="text">
@@ -173,7 +171,7 @@
             </div>
           </div>
 
-          <div class="mix java" data-my-order="1">
+          <div class="mix package" data-my-order="1">
             <div>
               <div class="card"></div>
               <div class="text">
@@ -184,7 +182,7 @@
             </div>
           </div>
 
-          <div class="mix java" data-my-order="1">
+          <div class="mix package" data-my-order="1">
             <div>
               <div class="card"></div>
               <div class="text">
@@ -195,7 +193,7 @@
             </div>
           </div>
 
-          <div class="mix java" data-my-order="1">
+          <div class="mix package" data-my-order="1">
             <div>
               <div class="card"></div>
               <div class="text">
