--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
       <h1>PORTFOLIO</h1>
       <div class="header-divide-black-center"></div>
 
-      <div class="filter-wrap waypoint" data-animation="fade-in">
+      <div class="filter-wrap waypoint mt-5" data-animation="fade-in">
         <div class="flex flex-row">
-          <div class="filter" data-filter="all">ALL</div>
+          <div class="filter" data-filter="all">All</div>
           <div class="filter" data-filter=".package">Package</div>
           <div class="filter" data-filter=".web">Web</div>
           <div class="filter" data-filter=".android">Android</div>
         </div>
         <div class="float-bar">
           <div class="flex flex-row">
-            <div class="filter" data-filter="all">ALL</div>
+            <div class="filter" data-filter="all">All</div>
             <div class="filter" data-filter=".package">Package</div>
             <div class="filter" data-filter=".web">Web</div>
             <div class="filter" data-filter=".android">Android</div>
