--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Kato Shinya</title>
+    <title>ThinkIT</title>
     <meta
       name="description"
-      content="This is the website of full-stack Web developer Shinya Kato."
+      content="This is the website of full-stack Web Developer Shinya Kato."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
