--- a/index.html
+++ b/index.html
@@ -274,7 +274,11 @@
               <h6>Contact Me</h6>
               <div class="header-divide-white"></div>
 
-              <form>
+              <form
+                action="https://formspree.io/mwkrgkdv"
+                method="POST"
+                enctype="multipart/form-data">
+
                 <div class="form-group">
                   <input
                     placeholder="Your email address"
