--- a/index.html
+++ b/index.html
@@ -282,9 +282,11 @@
                 <div class="form-group">
                   <input
                     placeholder="Your email address"
+                    name="_replyto"
                     type="email"
                     class="form-control"
                     id="form-control-email"
+                    required
                   />
                 </div>
                 <div class="form-group">
@@ -293,6 +295,7 @@
                     type="text"
                     class="form-control"
                     id="form-control-title"
+                    required
                   />
                 </div>
                 <div class="form-group">
