--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
                 </div>
                 <div class="form-group">
                   <input
-                    placeholder="Title"
+                    placeholder="Subject"
+                    name="_subject"
                     type="text"
                     class="form-control"
                     id="form-control-title"
