--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                 <div class="form-group">
                   <textarea
                     placeholder="Write message"
+                    name="name"
                     class="form-control"
                     id="form-control-textarea"
                     rows="12"
