--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
                     class="form-control"
                     id="form-control-textarea"
                     rows="12"
+                    required
                   ></textarea>
                 </div>
                 <input type="submit" class="button-color-white float-right" value="SEND" />
@@ -319,6 +320,12 @@
 
     <section id="footer">
       <div id="copyright">
+        <div class="social-links">
+          <a title="GitHub" href="" target="_blank">GitHub</a> |
+          <a title="Instagram" href="" target="_blank">Instagram</a> |
+          <a title="Twitter" href="" target="_blank">Twitter</a>
+        </div>
+
         <p>
           <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
         </p>
