--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
       <div id="copyright">
         <p>
           <div class="social-links">
-            <a title="GitHub" href="" target="_blank">GitHub</a> |
-            <a title="Instagram" href="" target="_blank">Instagram</a> |
-            <a title="Twitter" href="" target="_blank">Twitter</a>
+            <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a> |
+            <a title="Instagram" href="https://instagram.com/thinkit_shinya" target="_blank">Instagram</a> |
+            <a title="Twitter" href="https://twitter.com/thinkit_shinya" target="_blank">Twitter</a>
           </div>
           <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
         </p>
