--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <div class="row mt-5">
           <div class="col-md-6">
-            <div class="about--text">
+            <div class="about-text">
               <div class="section-title">
                 <h2 class="text-center">Skills</h2>
                 <h1>Experience</h1>
@@ -125,7 +125,7 @@
 
         <div class="row mt-5">
           <div class="col-md-12">
-            <div class="about--text">
+            <div class="about-text">
               <div class="section-title">
                 <h2 class="text-center">Mind</h2>
                 <h1>Philosophy</h1>
