--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section id="contact" name="contact">
       <div class="gray-divide-2"></div>
 
-      <div id="contact-information">
+      <div id="contact-detail">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
