--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="./src/org/thinkit/web/css/profile-card.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/social-logo-color.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/barfiller.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/contact.css" />
   </head>
 
   <body>
