--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/preloader.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/about.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/portfolio.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/index.css" />
