--- a/index.html
+++ b/index.html
@@ -175,23 +175,16 @@
       <div id="contact-detail">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
               <div class="row">
                 <div class="col-md-12 col-xs-6">
-                  <div id="my-repository">
-                    <h6>My Repository</h6>
+                  <div class="mt-5">
+                    <h6>Connect With Me</h6>
                     <div class="header-divide-white"></div>
 
                     <a href="https://github.com/myConsciousness" target="_blank">
                       <div class="fab fa-github"></div>
                     </a>
-                  </div>
-                </div>
-                <div class="col-md-12 col-xs-6">
-                  <div id="my-sns" class="mt-5">
-                    <h6>Connect With Me</h6>
-                    <div class="header-divide-white"></div>
-
                     <a href="https://instagram.com/thinkit_shinya" target="_blank">
                       <div class="fab fa-instagram"></div>
                     </a>
@@ -200,7 +193,7 @@
                     </a>
                   </div>
                 </div>
-                <div class="col-md-12 col-xs-12">
+                <div class="col-md-12 col-xs-6">
                   <div id="my-info" class="mt-5">
                     <h6>Info</h6>
                     <div class="header-divide-white"></div>
@@ -231,7 +224,7 @@
               </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-xs-12">
               <h6>Contact Me</h6>
               <div class="header-divide-white"></div>
 
