--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <div class="row">
             <div class="col-md-6 col-xs-12">
               <div class="row">
-                <div class="col-md-12 col-xs-6">
+                <div class="col-md-12">
                   <h6>Connect With Me</h6>
                   <div class="header-divide-white"></div>
 
@@ -190,7 +190,7 @@
                   <a href="https://twitter.com/thinkit_shinya" target="_blank">
                     <div class="fab fa-twitter"></div>
                   </a>
-                <div class="col-md-12 col-xs-6">
+                <div class="col-md-12">
                   <div id="my-info" class="mt-5">
                     <h6>Info</h6>
                     <div class="header-divide-white"></div>
