--- a/index.html
+++ b/index.html
@@ -196,24 +196,30 @@
                     <div class="header-divide-white"></div>
 
                     <div class="row">
-                      <div class="col-md-2">
-                        <div class="far fa-envelope"></div>
+                      <div class="col-md-12 col-6">
+                        <div class="row">
+                          <div class="col-md-2">
+                            <div class="far fa-envelope"></div>
+                          </div>
+                          <div class="col-md-10">
+                            <div class="contact-info">Email:</div>
+                            <address class="contact-info">
+                              <strong>kato.shinya.dev@gmail.com</strong>
+                            </address>
+                          </div>
+                        </div>
                       </div>
-                      <div class="col-md-10">
-                        <div class="contact-info">Email:</div>
-                        <address class="contact-info">
-                          <strong>kato.shinya.dev@gmail.com</strong>
-                        </address>
-                      </div>
-                    </div>
 
-                    <div class="row mt-3">
-                      <div class="col-md-2">
-                        <div class="fas fa-mobile-alt"></div>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="contact-info">Phone:</div>
-                        <div class="contact-info"><strong>Ask me!</strong></div>
+                      <div class="col-md-12 col-6">
+                        <div class="row mt-3">
+                          <div class="col-md-2">
+                            <div class="fas fa-mobile-alt"></div>
+                          </div>
+                          <div class="col-md-10">
+                            <div class="contact-info">Phone:</div>
+                            <div class="contact-info"><strong>Ask me!</strong></div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
