--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                       <div class="col-md-12 col-6">
                         <div class="row mt-3">
                           <div class="col-md-2">
-                            <div class="fal fa-phone"></div>
+                            <div class="fas fa-phone"></div>
                           </div>
                           <div class="col-md-10">                        
                             <div class="contact-info"><strong>Ask me!</strong></div>
