--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/relaxing-waves.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/preloader.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/about.css" />
@@ -169,7 +170,11 @@
     </section>
 
     <section id="contact" name="contact">
-      <div class="gray-divide-2"></div>
+      <div
+        class="relaxing-waves-container"
+        wave-background="f5f5f5"
+        wave-color="444957"
+      ></div>
 
       <div id="contact-detail">
         <div class="container">
@@ -290,6 +295,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
+    <script src="./src/org/thinkit/web/js/relaxingWaves.js"></script>
     <script src="./src/org/thinkit/web/js/jquery.barfiller.js"></script>
     <script src="./src/org/thinkit/web/js/barFiller.js"></script>
     <script src="./src/org/thinkit/web/js/mindFiller.js"></script>
