--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/data-animation.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/relaxing-waves.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/preloader.css" />
