--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
 
     <section id="about" class="about me" name="about">
       <div class="container">
-        <h1>ABOUT</h1>
+        <h1 class="waypoint" data-animation="slide-in-left">ABOUT</h1>
+        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
 
-        <div class="header-divide-black-center mb-5"></div>
-
-        <aside id="profile-card" class="profile-card">
+        <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
           <header>
             <a href="https://github.com/myConsciousness">
               <img src="./src/org/thinkit/web/img/me.png" />
