--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="row mt-5">
           <div class="col-md-6">
-            <div class="about-text">
+            <div class="about-text waypoint" data-animation="slide-in-left">
               <div class="section-title">
                 <h2 class="text-center">Skills</h2>
                 <h1>Experience</h1>
@@ -124,7 +124,7 @@
               </p>
             </div>
           </div>
-          <div id="skill-bars" class="col-md-6 mt-5 mb-5"></div>
+          <div id="skill-bars" class="col-md-6 mt-5 mb-5 waypoint" data-animation="slide-in-right"></div>
         </div>
 
         <div class="row mt-5">
