--- a/index.html
+++ b/index.html
@@ -34,193 +34,194 @@
     <link rel="stylesheet" href="./src/org/thinkit/web/css/barfiller.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/contact.css" />
   </head>
-
   <body>
-    <div id="preloder">
-      <div class="loader"></div>
-    </div>
-
-    <section id="shooting-star" class="flex">
-      <div id="pt" class="canvas"></div>
-
-      <div cass="flex height-fix">
-        <div class="button page-link fill-button" destination="about">WELCOME TO MY WEBSITE</div>
-
-        <nav class="flex">
-          <div class="link-wrap">
-            <div class="active page-link" destination="shooting-star">home</div>
-            <div class="page-link" destination="about">about</div>
-            <div class="page-link" destination="portfolio">portfolio</div>
-            <div class="page-link" destination="contact">contact</div>
-          </div>
-        </nav>
+    <div class="overflow-wrap">
+      <div id="preloder">
+        <div class="loader"></div>
       </div>
-    </section>
 
-    <section id="about" class="about me" name="about">
-      <div class="container">
-        <h1 class="waypoint" data-animation="slide-in-left">ABOUT</h1>
-        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
+      <section id="shooting-star" class="flex">
+        <div id="pt" class="canvas"></div>
 
-        <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
-          <header>
-            <a href="https://github.com/myConsciousness">
-              <img src="./src/org/thinkit/web/img/me.png" />
-            </a>
+        <div class="flex height-fix">
+          <div class="button page-link fill-button" destination="about">WELCOME TO MY WEBSITE</div>
 
-            <h1>Kato Shinya</h1>
-            <h2>- Full Stack Web Developer -</h2>
-          </header>
+          <nav class="flex">
+            <div class="link-wrap">
+              <div class="active page-link" destination="shooting-star">home</div>
+              <div class="page-link" destination="about">about</div>
+              <div class="page-link" destination="portfolio">portfolio</div>
+              <div class="page-link" destination="contact">contact</div>
+            </div>
+          </nav>
+        </div>
+      </section>
 
-          <div class="profile-bio">
-            <p>Hello there!</p>
-            <p class="text-center">
-              I'm a full-stack Web Developer who is specialized in designing and creating Java-based
-              web applications and business improvement tools.
-            </p>
-          </div>
+      <section id="about" class="about me" name="about">
+        <div class="container">
+          <h1 class="waypoint" data-animation="slide-in-left">ABOUT</h1>
+          <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
 
-          <ul class="profile-social-links">
-            <li>
-              <a href="https://github.com/myConsciousness" target="_blank">
-                <div class="color-github fab fa-github"></div>
+          <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
+            <header>
+              <a href="https://github.com/myConsciousness">
+                <img src="./src/org/thinkit/web/img/me.png" />
               </a>
-            </li>
-            <li>
-              <a href="https://instagram.com/thinkit_shinya" target="_blank">
-                <div class="color-instagram fab fa-instagram"></div>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/thinkit_shinya" target="_blank">
-                <div class="color-twitter fab fa-twitter"></div>
-              </a>
-            </li>
-          </ul>
-        </aside>
 
-        <div class="row mt-5">
-          <div class="col-md-6">
-            <div class="about-text waypoint" data-animation="slide-in-left">
-              <div class="section-title">
-                <h2 class="text-center">Skills</h2>
-                <h1>Experience</h1>
-              </div>
-              <p>
-                I have been involved in the design and development of various web applications and
-                business improvement tools, mainly in Java. The skill graph is not the whole story
-                of my development, but these are main skills I have.<br /><br />
-                I have built a desktop app that uses Python for crawling and scraping. I also have
-                experience developing and releasing Android apps to the Play Store. Basically I
-                design and create Java-based web applications, but I am also interested in the
-                Python, Android fields and UI design.<br /><br />
-                <strong
-                  ><a
-                    href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
-                    target="_blank"
-                    >For a more detailed skill set, see here.</a
-                  ></strong
-                >
+              <h1>Kato Shinya</h1>
+              <h2>- Full Stack Web Developer -</h2>
+            </header>
+
+            <div class="profile-bio">
+              <p>Hello there!</p>
+              <p class="text-center">
+                I'm a full-stack Web Developer who is specialized in designing and creating Java-based
+                web applications and business improvement tools.
               </p>
             </div>
-          </div>
-          <div id="skill-bars" class="col-md-6 mt-5 mb-5 waypoint" data-animation="slide-in-right"></div>
-        </div>
 
-        <div class="row mt-5">
-          <div class="col-md-12">
-            <div class="about-text">
-              <div class="section-title">
-                <h2 class="text-center">Mind</h2>
-                <h1>Philosophy</h1>
+            <ul class="profile-social-links">
+              <li>
+                <a href="https://github.com/myConsciousness" target="_blank">
+                  <div class="color-github fab fa-github"></div>
+                </a>
+              </li>
+              <li>
+                <a href="https://instagram.com/thinkit_shinya" target="_blank">
+                  <div class="color-instagram fab fa-instagram"></div>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/thinkit_shinya" target="_blank">
+                  <div class="color-twitter fab fa-twitter"></div>
+                </a>
+              </li>
+            </ul>
+          </aside>
+
+          <div class="row mt-5">
+            <div class="col-md-6">
+              <div class="about-text waypoint" data-animation="slide-in-left">
+                <div class="section-title">
+                  <h2 class="text-center">Skills</h2>
+                  <h1>Experience</h1>
+                </div>
+                <p>
+                  I have been involved in the design and development of various web applications and
+                  business improvement tools, mainly in Java. The skill graph is not the whole story
+                  of my development, but these are main skills I have.<br /><br />
+                  I have built a desktop app that uses Python for crawling and scraping. I also have
+                  experience developing and releasing Android apps to the Play Store. Basically I
+                  design and create Java-based web applications, but I am also interested in the
+                  Python, Android fields and UI design.<br /><br />
+                  <strong
+                    ><a
+                      href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
+                      target="_blank"
+                      >For a more detailed skill set, see here.</a
+                    ></strong
+                  >
+                </p>
               </div>
             </div>
+            <div id="skill-bars" class="col-md-6 mt-5 mb-5 waypoint" data-animation="slide-in-right"></div>
           </div>
-          <div id="mind-list" class="col-md-12 mt-5"></div>
-        </div>
-      </div>
-    </section>
 
-    <section id="portfolio" class="portfolio" name="portfolio">
-      <div class="white-divide-2"></div>
-      <h1>PORTFOLIO</h1>
-      <div class="header-divide-black-center"></div>
-
-      <div class="filter-wrap waypoint mt-5" data-animation="fade-in">
-        <div class="flex flex-row">
-          <div class="filter" data-filter=".web">Web</div>
-          <div class="filter" data-filter=".android">Android</div>
-          <div class="filter" data-filter=".package">Package</div>
-          <div class="filter" data-filter="all">All</div>
+          <div class="row mt-5">
+            <div class="col-md-12">
+              <div class="about-text">
+                <div class="section-title">
+                  <h2 class="text-center">Mind</h2>
+                  <h1>Philosophy</h1>
+                </div>
+              </div>
+            </div>
+            <div id="mind-list" class="col-md-12 mt-5"></div>
+          </div>
         </div>
-        <div class="float-bar">
+      </section>
+
+      <section id="portfolio" class="portfolio" name="portfolio">
+        <div class="white-divide-2"></div>
+        <h1>PORTFOLIO</h1>
+        <div class="header-divide-black-center"></div>
+
+        <div class="filter-wrap waypoint mt-5" data-animation="fade-in">
           <div class="flex flex-row">
             <div class="filter" data-filter=".web">Web</div>
             <div class="filter" data-filter=".android">Android</div>
             <div class="filter" data-filter=".package">Package</div>
             <div class="filter" data-filter="all">All</div>
           </div>
+          <div class="float-bar">
+            <div class="flex flex-row">
+              <div class="filter" data-filter=".web">Web</div>
+              <div class="filter" data-filter=".android">Android</div>
+              <div class="filter" data-filter=".package">Package</div>
+              <div class="filter" data-filter="all">All</div>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="flex">
-        <div id="gallery" class="container flex flex-row flex-wrap waypoint">
+        <div class="flex">
+          <div id="gallery" class="container flex flex-row flex-wrap waypoint">
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="contact" name="contact">
-      <div
-        class="relaxing-waves-container"
-        wave-background="f5f5f5"
-        wave-color="444957"
-      ></div>
+      <section id="contact" name="contact">
+        <div
+          class="relaxing-waves-container"
+          wave-background="f5f5f5"
+          wave-color="444957"
+        ></div>
 
-      <div id="contact-detail">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-xs-12">
-              <div class="row">
-                <div class="col-md-12">
-                  <h6>Connect With Me</h6>
-                  <div class="header-divide-white"></div>
-
-                  <a href="https://github.com/myConsciousness" target="_blank">
-                    <div class="fab fa-github"></div>
-                  </a>
-                  <a href="https://instagram.com/thinkit_shinya" target="_blank">
-                    <div class="fab fa-instagram"></div>
-                  </a>
-                  <a href="https://twitter.com/thinkit_shinya" target="_blank">
-                    <div class="fab fa-twitter"></div>
-                  </a>
-                </div>
-                <div class="col-md-12">
-                  <div id="my-info" class="mt-5">
-                    <h6>Info</h6>
+        <div id="contact-detail">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 col-xs-12">
+                <div class="row">
+                  <div class="col-md-12">
+                    <h6>Connect With Me</h6>
                     <div class="header-divide-white"></div>
 
-                    <div class="row">
-                      <div class="col-md-12 col-6">
-                        <div class="row">
-                          <div class="col-md-2">
-                            <div class="far fa-envelope"></div>
-                          </div>
-                          <div class="col-md-10">
-                            <address class="contact-info">
-                              <strong>kato.shinya.dev@gmail.com</strong>
-                            </address>
+                    <a href="https://github.com/myConsciousness" target="_blank">
+                      <div class="fab fa-github"></div>
+                    </a>
+                    <a href="https://instagram.com/thinkit_shinya" target="_blank">
+                      <div class="fab fa-instagram"></div>
+                    </a>
+                    <a href="https://twitter.com/thinkit_shinya" target="_blank">
+                      <div class="fab fa-twitter"></div>
+                    </a>
+                  </div>
+                  <div class="col-md-12">
+                    <div id="my-info" class="mt-5">
+                      <h6>Info</h6>
+                      <div class="header-divide-white"></div>
+
+                      <div class="row">
+                        <div class="col-md-12 col-6">
+                          <div class="row">
+                            <div class="col-md-2">
+                              <div class="far fa-envelope"></div>
+                            </div>
+                            <div class="col-md-10">
+                              <address class="contact-info">
+                                <strong>kato.shinya.dev@gmail.com</strong>
+                              </address>
+                            </div>
                           </div>
                         </div>
-                      </div>
 
-                      <div class="col-md-12 col-6">
-                        <div class="row mt-3">
-                          <div class="col-md-2">
-                            <div class="fas fa-phone"></div>
-                          </div>
-                          <div class="col-md-10">
-                            <div class="contact-info"><strong>Ask me!</strong></div>
+                        <div class="col-md-12 col-6">
+                          <div class="row mt-3">
+                            <div class="col-md-2">
+                              <div class="fas fa-phone"></div>
+                            </div>
+                            <div class="col-md-10">
+                              <div class="contact-info"><strong>Ask me!</strong></div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -228,67 +229,67 @@
                   </div>
                 </div>
               </div>
-            </div>
 
-            <div class="col-md-6 col-xs-12">
-              <h6>Contact Me</h6>
-              <div class="header-divide-white"></div>
+              <div class="col-md-6 col-xs-12">
+                <h6>Contact Me</h6>
+                <div class="header-divide-white"></div>
 
-              <form
-                action="https://formspree.io/mwkrgkdv"
-                method="POST"
-                enctype="multipart/form-data">
+                <form
+                  action="https://formspree.io/mwkrgkdv"
+                  method="POST"
+                  enctype="multipart/form-data">
 
-                <div class="form-group">
-                  <input
-                    placeholder="Your email address"
-                    name="_replyto"
-                    type="email"
-                    class="form-control"
-                    id="form-control-email"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <input
-                    placeholder="Subject"
-                    name="_subject"
-                    type="text"
-                    class="form-control"
-                    id="form-control-title"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <textarea
-                    placeholder="Write message"
-                    name="name"
-                    class="form-control"
-                    id="form-control-textarea"
-                    rows="12"
-                    required
-                  ></textarea>
-                </div>
-                <input type="submit" class="button-color-white float-right" value="SEND" />
-              </form>
+                  <div class="form-group">
+                    <input
+                      placeholder="Your email address"
+                      name="_replyto"
+                      type="email"
+                      class="form-control"
+                      id="form-control-email"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <input
+                      placeholder="Subject"
+                      name="_subject"
+                      type="text"
+                      class="form-control"
+                      id="form-control-title"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <textarea
+                      placeholder="Write message"
+                      name="name"
+                      class="form-control"
+                      id="form-control-textarea"
+                      rows="12"
+                      required
+                    ></textarea>
+                  </div>
+                  <input type="submit" class="button-color-white float-right" value="SEND" />
+                </form>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section id="footer">
-      <div id="copyright">
-        <p>
-          <div class="social-links">
-            <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a> |
-            <a title="Instagram" href="https://instagram.com/thinkit_shinya" target="_blank">Instagram</a> |
-            <a title="Twitter" href="https://twitter.com/thinkit_shinya" target="_blank">Twitter</a>
-          </div>
-          <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
-        </p>
-      </div>
-    </section>
+      <section id="footer">
+        <div id="copyright">
+          <p>
+            <div class="social-links">
+              <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a> |
+              <a title="Instagram" href="https://instagram.com/thinkit_shinya" target="_blank">Instagram</a> |
+              <a title="Twitter" href="https://twitter.com/thinkit_shinya" target="_blank">Twitter</a>
+            </div>
+            <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
+          </p>
+        </div>
+      </section>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
