--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
       <section id="about" class="about me" name="about">
         <div class="container">
           <h1 class="waypoint" data-animation="slide-in-left">ABOUT</h1>
-          <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
+          <div
+            class="header-divide-black-center mb-5 waypoint"
+            data-animation="slide-in-left"
+          ></div>
 
           <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
             <header>
@@ -75,8 +78,8 @@
             <div class="profile-bio">
               <p>Hello there!</p>
               <p class="text-center">
-                I'm a full-stack Web Developer who is specialized in designing and creating Java-based
-                web applications and business improvement tools.
+                I'm a full-stack Web Developer who is specialized in designing and creating
+                Java-based web applications and business improvement tools.
               </p>
             </div>
 
@@ -124,7 +127,11 @@
                 </p>
               </div>
             </div>
-            <div id="skill-bars" class="col-md-6 mt-5 mb-5 waypoint" data-animation="slide-in-right"></div>
+            <div
+              id="skill-bars"
+              class="col-md-6 mt-5 mb-5 waypoint"
+              data-animation="slide-in-right"
+            ></div>
           </div>
 
           <div class="row mt-5">
@@ -164,17 +171,12 @@
         </div>
 
         <div class="flex">
-          <div id="gallery" class="container flex flex-row flex-wrap waypoint">
-          </div>
+          <div id="gallery" class="container flex flex-row flex-wrap waypoint"></div>
         </div>
       </section>
 
       <section id="contact" name="contact">
-        <div
-          class="relaxing-waves-container"
-          wave-background="f5f5f5"
-          wave-color="444957"
-        ></div>
+        <div class="relaxing-waves-container" wave-background="f5f5f5" wave-color="444957"></div>
 
         <div id="contact-detail">
           <div class="container">
@@ -237,8 +239,8 @@
                 <form
                   action="https://formspree.io/mwkrgkdv"
                   method="POST"
-                  enctype="multipart/form-data">
-
+                  enctype="multipart/form-data"
+                >
                   <div class="form-group">
                     <input
                       placeholder="Your email address"
@@ -279,13 +281,18 @@
 
       <section id="footer">
         <div id="copyright">
+          <div class="social-links">
+            <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a> |
+            <a title="Instagram" href="https://instagram.com/thinkit_shinya" target="_blank"
+              >Instagram</a
+            >
+            |
+            <a title="Twitter" href="https://twitter.com/thinkit_shinya" target="_blank">Twitter</a>
+          </div>
           <p>
-            <div class="social-links">
-              <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a> |
-              <a title="Instagram" href="https://instagram.com/thinkit_shinya" target="_blank">Instagram</a> |
-              <a title="Twitter" href="https://twitter.com/thinkit_shinya" target="_blank">Twitter</a>
-            </div>
-            <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
+            <span class="highlight-turquoise"
+              >Copyright © 2020 Kato Shinya All Rights Reserved.</span
+            >
           </p>
         </div>
       </section>
