--- a/index.html
+++ b/index.html
@@ -282,11 +282,12 @@
       <section id="footer">
         <div id="copyright">
           <div class="social-links">
-            <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a> |
+            <a title="GitHub" href="https://github.com/myConsciousness" target="_blank">GitHub</a>
+            <span>|</span>
             <a title="Instagram" href="https://instagram.com/thinkit_shinya" target="_blank"
               >Instagram</a
             >
-            |
+            <span>|</span>
             <a title="Twitter" href="https://twitter.com/thinkit_shinya" target="_blank">Twitter</a>
           </div>
           <p>
