--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/skill.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/data-animation.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/relaxing-waves.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
@@ -103,6 +104,28 @@
           </aside>
 
           <div class="row mt-5">
+            <div class="col-md-12">
+              <div class="about-text">
+                <div class="section-title">
+                  <h2 class="text-center">Mind</h2>
+                  <h1>Philosophy</h1>
+                </div>
+              </div>
+            </div>
+            <div id="mind-list" class="col-md-12 mt-5"></div>
+          </div>
+        </div>
+      </section>
+
+      <section id="skill">
+        <div class="container">
+          <h1 class="waypoint" data-animation="slide-in-left">SKILL</h1>
+          <div
+            class="header-divide-black-center mb-5 waypoint"
+            data-animation="slide-in-left"
+          ></div>
+
+          <div class="row mt-5">
             <div class="col-md-6">
               <div class="about-text waypoint" data-animation="slide-in-left">
                 <div class="section-title">
@@ -132,18 +155,6 @@
               class="col-md-6 mt-5 mb-5 waypoint"
               data-animation="slide-in-right"
             ></div>
-          </div>
-
-          <div class="row mt-5">
-            <div class="col-md-12">
-              <div class="about-text">
-                <div class="section-title">
-                  <h2 class="text-center">Mind</h2>
-                  <h1>Philosophy</h1>
-                </div>
-              </div>
-            </div>
-            <div id="mind-list" class="col-md-12 mt-5"></div>
           </div>
         </div>
       </section>
