--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="./src/org/thinkit/web/css/skill.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/mind.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/data-animation.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/relaxing-waves.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
@@ -102,7 +103,16 @@
               </li>
             </ul>
           </aside>
+        </div>
+      </section>
 
+      <section id="mind">
+        <div class="container">
+          <h1 class="waypoint" data-animation="slide-in-left">MIND</h1>
+          <div
+            class="header-divide-black-center mb-5 waypoint"
+            data-animation="slide-in-left"
+          ></div>
           <div class="row mt-5">
             <div class="col-md-12">
               <div class="about-text">
