--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div id="pt" class="canvas"></div>
 
       <div class="flex height-fix">
-        <div class="button page-link fill-button" destination="about">WELCOME TO MY WEBSITE</div>
+        <div class="button page-link fill-button" destination="about">THINKIT HOME</div>
 
         <nav class="flex">
           <div class="link-wrap">
