--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./src/org/thinkit/web/css/relaxing-waves.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/shooting-star.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/preloader.css" />
-    <link rel="stylesheet" href="./src/org/thinkit/web/css/about.css" />
+    <link rel="stylesheet" href="./src/org/thinkit/web/css/bio.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/portfolio.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/web/css/index.css" />
@@ -53,7 +53,7 @@
         <nav class="flex">
           <div class="link-wrap">
             <div class="active page-link" destination="shooting-star">home</div>
-            <div class="page-link" destination="about">about</div>
+            <div class="page-link" destination="bio">bio</div>
             <div class="page-link" destination="skill">skill</div>
             <div class="page-link" destination="mind">mind</div>
             <div class="page-link" destination="portfolio">portfolio</div>
@@ -63,9 +63,9 @@
       </div>
     </section>
 
-    <section id="about" class="about me" name="about">
+    <section id="bio" class="about me" name="bio">
       <div class="container">
-        <h1 class="waypoint" data-animation="slide-in-left">ABOUT</h1>
+        <h1 class="waypoint" data-animation="slide-in-left">BIOGRAPHY</h1>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
 
         <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
