--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
     </section>
 
     <section id="bio" class="about me" name="bio">
-      <div class="container">
-        <h1 class="waypoint" data-animation="slide-in-left">BIOGRAPHY</h1>
+      <div class="section-title">
+        <h2 class="waypoint" data-animation="slide-in-left">BIOGRAPHY</h2>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
-
+        <h1>About Me</h1>
+      </div>
+      <div class="container">
         <aside id="profile-card" class="profile-card waypoint" data-animation="flip-in-x">
           <header>
             <a href="https://github.com/myConsciousness">
@@ -109,16 +111,18 @@
 
     <section id="skill" name="skill">
       <div class="container">
-        <h1 class="waypoint" data-animation="slide-in-left">SKILL</h1>
-        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
+        <div class="section-title">
+          <h2 class="waypoint" data-animation="slide-in-left">SKILL</h2>
+          <div
+            class="header-divide-black-center mb-5 waypoint"
+            data-animation="slide-in-left"
+          ></div>
+          <h1>Experience</h1>
+        </div>
 
         <div class="row mt-5">
           <div class="col-md-6">
             <div class="about-text waypoint" data-animation="slide-in-left">
-              <div class="section-title">
-                <h2 class="text-center">Skills</h2>
-                <h1>Experience</h1>
-              </div>
               <p>
                 I have been involved in the design and development of various web applications and
                 business improvement tools, mainly in Java. The skill graph is not the whole story
