--- a/index.html
+++ b/index.html
@@ -151,27 +151,24 @@
     </section>
 
     <section id="mind" name="mind">
-      <div class="container">
-        <h1 class="waypoint" data-animation="slide-in-left">MIND</h1>
+      <div class="section-title">
+        <h2 class="waypoint" data-animation="slide-in-left">MIND</h2>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
-        <div class="row mt-5">
-          <div class="col-md-12">
-            <div class="about-text">
-              <div class="section-title">
-                <h2 class="text-center">Mind</h2>
-                <h1>Philosophy</h1>
-              </div>
-            </div>
-          </div>
-          <div id="mind-list" class="col-md-12 mt-5"></div>
-        </div>
+        <h1>Philosophy</h1>
+      </div>
+      <div class="container">
+        <div id="mind-list" class="mt-5"></div>
       </div>
     </section>
 
     <section id="portfolio" class="portfolio" name="portfolio">
       <div class="white-divide-2"></div>
-      <h1>PORTFOLIO</h1>
-      <div class="header-divide-black-center"></div>
+
+      <div class="section-title">
+        <h2 class="waypoint" data-animation="slide-in-left">PORTFOLIO</h2>
+        <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
+        <h1>Gallery</h1>
+      </div>
 
       <div class="filter-wrap waypoint mt-5" data-animation="fade-in">
         <div class="flex flex-row">
