--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
     </section>
 
     <section id="skill" name="skill">
+      <div class="relaxing-waves-container" wave-background="fff" wave-color="#f5f5f5"></div>
+
       <div class="container">
         <div class="section-title">
           <h2 class="waypoint" data-animation="slide-in-left">SKILL</h2>
@@ -151,6 +153,8 @@
     </section>
 
     <section id="mind" name="mind">
+      <div class="relaxing-waves-container" wave-background="f5f5f5" wave-color="ffffff"></div>
+
       <div class="section-title">
         <h2 class="waypoint" data-animation="slide-in-left">MIND</h2>
         <div class="header-divide-black-center mb-5 waypoint" data-animation="slide-in-left"></div>
@@ -162,7 +166,7 @@
     </section>
 
     <section id="portfolio" class="portfolio" name="portfolio">
-      <div class="white-divide-2"></div>
+      <div class="relaxing-waves-container" wave-background="fff" wave-color="#BFBFBF"></div>
 
       <div class="section-title">
         <h2 class="waypoint" data-animation="slide-in-left">PORTFOLIO</h2>
@@ -193,7 +197,7 @@
     </section>
 
     <section id="contact" name="contact">
-      <div class="relaxing-waves-container" wave-background="f5f5f5" wave-color="444957"></div>
+      <div class="relaxing-waves-container" wave-background="bfbfbf" wave-color="444957"></div>
 
       <div id="contact-detail">
         <div class="container">
