--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
 
     <section id="portfolio" class="portfolio" name="portfolio">
-      <div class="relaxing-waves-container" wave-background="fff" wave-color="#BFBFBF"></div>
+      <div class="relaxing-waves-container" wave-background="fff" wave-color="bfbfbf"></div>
 
       <div class="section-title">
         <h2 class="waypoint" data-animation="slide-in-left">PORTFOLIO</h2>
