--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="robots" content="noindex,follow" />
+    <meta property="og:title" content="ThinkIT" />
+    <meta
+      property="og:description"
+      content="This is the website of full-stack Web Developer Shinya Kato."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="ThinkIT" />
 
     <title>ThinkIT</title>
 
